--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "devDependencies": {
     "electron": "^40.0.0",
     "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "dseg": "^0.46.0"
   }
 }
